# my-apis

./: build.sh  pyproject.toml  vercel.json
api/: settings_base.py  urls.py  wsgi.py
api/settings/: dev.py  prod.py
fakedata/: urls.py  views.py
staticfiles/: welcome.json
